--- a/app/views/cadastro/index.phtml
+++ b/app/views/cadastro/index.phtml
@@ -1,9 +1,19 @@
-                <div class="panel-body">
-                    <?php echo (isset($this->alert) ? $this->alert : ''); ?>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-custom">
+            <div class="panel-heading">
+                <a id="logo" href="<?php echo BASE; ?>">
+                    <img class="img-responsive" src="<?php echo IMG; ?>hxphp-logo.png" alt="">
+                </a> <br>
+                <?php echo (isset($this->menu) ? $this->menu : ''); ?>
+            </div>             
+            <div class="panel-body">
+              <?php echo (isset($this->alert)? $this->alert : '');?>                
                     <form action="<?php echo BASE; ?>cadastro/cadastrar/" class="form-horizontal" method="post">
                       <div class="form-group">
                         <label for="name" class="col-sm-3 control-label">Nome:</label>
                         <div class="col-sm-8">
+                          <!-- required faz com que os campos tem que ser preenchidos obrigatóriamente-->
                           <input required type="text" name="name" class="form-control" id="name" placeholder="hxtutors" value="<?php echo $this->request->post('name') ?>">
                         </div>
                       </div>
@@ -31,4 +41,7 @@
                         </div>
                       </div>
                     </form>
-                </div>
+            </div>
+        </div>
+    </div>
+</div>
