--- a/app/views/footer.phtml
+++ b/app/views/footer.phtml
@@ -1,14 +1,10 @@
-	            </div>
-	        </div>
-	    </div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 col-md-offset-4 text-center">
-				HXPHP <?php echo date("Y"); ?> &copy; - Todos os direitos reservados
-			</div>
-		</div>
-	</div>
-	<script src="<?php echo BOWER; ?>bootstrap/dist/js/bootstrap.min.js"></script>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4 text-center">
+            Trnasporte I.A <?php echo date("Y"); ?> &copy; - Todos os direitos reservados
+        </div>
+    </div>
+</div>
 </body>
 </html>
