--- a/app/views/recuperar/index.phtml
+++ b/app/views/recuperar/index.phtml
@@ -1,17 +1,35 @@
-
-                <div class="panel-body">
-                    <?php echo (isset($this->alert) ? $this->alert : ''); ?>
-                    <form action="<?php echo BASE; ?>recuperar/solicitar/" class="form-horizontal" method="post">
-                      <div class="form-group">
-                        <label for="email" class="col-sm-3 control-label">E-mail:</label>
-                        <div class="col-sm-8">
-                          <input type="email" name="email" class="form-control" id="email" placeholder="seuemail@dominio.com.br" value="<?php echo $this->request->post('email') ?>">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-offset-3 col-sm-10">
-                          <button type="submit" class="btn btn-success">Enviar link de redefinição</button>
-                        </div>
-                      </div>
-                    </form>
-                </div>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="panel panel-custom">
+            <div class="panel-heading">
+                <a id="logo" href="<?php echo BASE; ?>">
+                    <img class="img-responsive" src="<?php echo IMG; ?>hxphp-logo.png" alt="">
+                </a> <br>
+                <?php echo (isset($this->menu) ? $this->menu : ''); ?>
+            </div>
+            <div class="panel-body"> 
+                <div class= "alert alert-block alert-warning">
+                    <h4>
+                        Recupere sua senha
+                    </h4>   
+                    Um link de redefinição será enviado para seu e-mail. Por favor, verifique a caixa de SPAM.
+                </div>              
+            <form class="form-horizontal">
+                  <div class="form-group">
+                    <label for="username" class="col-sm-2 control-label">Username</label>
+                    <div class="col-sm-10">
+                      <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                    </div>
+                  </div>                  
+                  <div class="form-group">                    
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <button type="submit" class="btn btn-success">Enviar Link de Recuperação</button>
+                    </div>
+                  </div>
+            </form>
+            </div>
+        </div>
+    </div>
+</div>
