--- a/app/views/login/index.phtml
+++ b/app/views/login/index.phtml
@@ -7,12 +7,13 @@
                 </a> <br>
                 <?php echo (isset($this->menu) ? $this->menu : ''); ?>
             </div>
-            <div class="panel-body">                
-            <form class="form-horizontal">
+            <div class="panel-body"> 
+            <?php echo (isset($this->menu) ? $this->menu : ''); ?>              
+             <form action="<?php echo BASE; ?>cadastro/cadastrar/" class="form-horizontal" method="post">
                   <div class="form-group">
                     <label for="name" class="col-sm-2 control-label">Nome</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" name="name" id="name" placeholder="Nome Completo">
+                      <input type="text" class="form-control" name="name" id="name" value="<?php echo $this->request->post('email') ?>" placeholder="Nome Completo">
                     </div>
                   </div>
                   <div class="form-group">
