--- a/app/views/login/index.phtml
+++ b/app/views/login/index.phtml
@@ -5,31 +5,29 @@
                 <a id="logo" href="<?php echo BASE; ?>">
                     <img class="img-responsive" src="<?php echo IMG; ?>hxphp-logo.png" alt="">
                 </a> <br>
-                <?php echo (isset($this->menu) ? $this->menu : ''); ?>
+                <?php echo (isset($this->alert) ? $this->alert : ''); ?>
             </div>
             <div class="panel-body"> 
             <?php echo (isset($this->menu) ? $this->menu : ''); ?>              
-             <form action="<?php echo BASE; ?>cadastro/cadastrar/" class="form-horizontal" method="post">
-                  <div class="form-group">
-                    <label for="name" class="col-sm-2 control-label">Nome</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" name="name" id="name" value="<?php echo $this->request->post('email') ?>" placeholder="Nome Completo">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">senha</label>
-                    <div class="col-sm-10">
-                      <input type="password" class="form-control" id="inputPassword3" placeholder="senha">
-                    </div>
-                  </div>
-                  <div class="form-group">                    
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                      <button type="submit" class="btn btn-success">Entrar</button>
-                    </div>
-                  </div>
-            </form>
+               <form action="<?php echo BASE; ?>login/logar/" class="form-horizontal" method="post">
+                      <div class="form-group">
+                        <label for="username" class="col-sm-3 control-label">Usuário:</label>
+                        <div class="col-sm-8">
+                          <input type="text" name="username" class="form-control" id="username" value="<?php echo $this->request->post('username') ?>" placeholder="hxtutors">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="password" class="col-sm-3 control-label">Senha:</label>
+                        <div class="col-sm-8">
+                          <input type="password" name="password" class="form-control" id="password" placeholder="Sua senha">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-3 col-sm-10">
+                          <button type="submit" class="btn btn-success">Entrar</button>
+                        </div>
+                      </div>
+                    </form>
             </div>
         </div>
     </div>
