--- a/app/views/recuperar/index.phtml
+++ b/app/views/recuperar/index.phtml
@@ -8,17 +8,12 @@
                 <?php echo (isset($this->menu) ? $this->menu : ''); ?>
             </div>
             <div class="panel-body"> 
-                <div class= "alert alert-block alert-warning">
-                    <h4>
-                        Recupere sua senha
-                    </h4>   
-                    Um link de redefinição será enviado para seu e-mail. Por favor, verifique a caixa de SPAM.
-                </div>              
-            <form class="form-horizontal">
+                 <?php echo (isset($this->alert) ? $this->alert : ''); ?>           
+            <form action="<?php echo BASE; ?>recuperar/solicitar/" class="form-horizontal" method="post">
                   <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">Username</label>
+                    <label for="email" class="col-sm-2 control-label">E-mail</label>
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="seuemail@dominio.com" value="<?php echo $this->request->post('username') ?>" placeholder="hxtutors">
                     </div>
                   </div>                  
                   <div class="form-group">                    
