--- a/app/views/recuperar/index.phtml
+++ b/app/views/recuperar/index.phtml
@@ -13,7 +13,7 @@
                   <div class="form-group">
                     <label for="email" class="col-sm-2 control-label">E-mail</label>
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" name="email" id="email" placeholder="seuemail@dominio.com" value="<?php echo $this->request->post('username') ?>" placeholder="hxtutors">
+                      <input type="email" class="form-control" name="email" id="email" placeholder="seuemail@dominio.com">
                     </div>
                   </div>                  
                   <div class="form-group">                    
