--- a/app/views/recuperar/redefinir.phtml
+++ b/app/views/recuperar/redefinir.phtml
@@ -1,5 +1,11 @@
-
-                <div class="panel-body">
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="panel panel-custom">
+      <div class="panel-heading">
+        <a id="logo" href="<?php echo BASE; ?>">
+                    <img class="img-responsive" src="<?php echo IMG; ?>hxphp-logo.png" alt="">
+                </a> <br>
+                  <div class="panel-body">
                     <?php echo (isset($this->alert) ? $this->alert : ''); ?>
                     <form action="<?php echo BASE; ?>recuperar/alterar-senha/<?php echo $view_token; ?>" class="form-horizontal" method="post">
                       <div class="form-group">
@@ -15,3 +21,8 @@
                       </div>
                     </form>
                 </div>
+      </div>          
+    </div>            
+  </div>
+</div>
+             
