--- a/app/views/footer.phtml
+++ b/app/views/footer.phtml
@@ -2,9 +2,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4 text-center">
-            Trnasporte I.A <?php echo date("Y"); ?> &copy; - Todos os direitos reservados
+            Transporte I.A <?php echo date("Y"); ?> &copy; - Todos os direitos reservados
         </div>
     </div>
 </div>
+	<script type="<?php echo BOWER; ?>jquery/dist/jquery.min.js"></script>
+	<script type="<?php echo BOWER; ?>bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> 
