--- a/app/views/header.phtml
+++ b/app/views/header.phtml
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Bruno C. Santos">
+        <meta name="author" content="Cristian Renato">
         <meta name="generator" content="HXPHP Framework">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title><?php echo $view_title; ?></title>
@@ -17,3 +17,13 @@
     </head>
     <body>
         <div class="container">
+            <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-custom">
+                    <div class="panel-heading">
+                        <a id="logo" href="<?php echo BASE; ?>">
+                            <img class="img-responsive" src="<?php echo IMG; ?>hxphp-logo.png" alt="">
+                        </a> <br>
+                        <div class="panel-body">
+                            <?php echo (isset($this->alert) ? $this->alert : ''); ?>
+                         </div>
