Trasação bootstrap para Materialize

--- a/app/views/recuperar/index.phtml
+++ b/app/views/recuperar/index.phtml
@@ -12,6 +12,7 @@
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                       <button type="submit" class="btn btn-success">Enviar Link de Recuperação</button>
+                      <!--<a href="login" class="btn waves-effect waves-light right" type="submit"> Voltar </a>-->
                     </div>
                   </div>
             </form>
