--- a/app/views/cadastro/index.phtml
+++ b/app/views/cadastro/index.phtml
@@ -5,19 +5,19 @@
                         <label for="name" class="col-sm-3 control-label">Nome:</label>
                         <div class="col-sm-8">
                           <!-- required faz com que os campos tem que ser preenchidos obrigatóriamente-->
-                          <input required type="text" name="name" class="form-control" id="name" placeholder="hxtutors" value="<?php echo $this->request->post('name') ?>">
+                          <input required type="text" name="name" class="form-control" id="name" placeholder="Nome Completo" value="<?php echo $this->request->post('name') ?>">
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="email" class="col-sm-3 control-label">E-mail:</label>
                         <div class="col-sm-8">
-                          <input required type="email" name="email" class="form-control" id="email" placeholder="seuemail@site.com.br" value="<?php echo $this->request->post('email') ?>">
+                          <input required type="email" name="email" class="form-control" id="email" placeholder="seuemail@.com.br" value="<?php echo $this->request->post('email') ?>">
                         </div>
                       </div>
                       <div class="form-group">
                         <label for="username" class="col-sm-3 control-label">Usuário:</label>
                         <div class="col-sm-8">
-                          <input required type="text" name="username" class="form-control" id="username" placeholder="hxtutors" value="<?php echo $this->request->post('username') ?>">
+                          <input required type="text" name="username" class="form-control" id="username" placeholder="Nome de usuário" value="<?php echo $this->request->post('username') ?>">
                         </div>
                       </div>
                       <div class="form-group">
@@ -29,8 +29,9 @@
                       <div class="form-group">
                         <div class="col-sm-offset-3 col-sm-10">
                           <button type="submit" class="btn btn-success">Cadastrar</button>
-                        </div>
-                      </div>
+                          <a href="login" class="btn waves-effect waves-light right" type="submit"> Voltar </a>
+                        </div>                        
+                      </div>                      
                     </form>
             </div>
         </div>
