--- a/app/views/home/index.phtml
+++ b/app/views/home/index.phtml
@@ -1,10 +1,14 @@
-  <div class="panel-body">
+  <div class="row margin">
+       <h4 class="alert alert-success">
                     <?php 
                         echo isset($this->menu) ? $this->menu->getMenu() : '';
                     ?>
+                    <br><br>
                     <h4 class="alert alert-success">
                         Uhull! Você foi autenticado com sucesso!
                     </h4>
                     Olá <?php echo $view_user->name; ?>, seja bem vindo(a). <br>
-                    <a href="<?php echo BASE . 'login/sair'; ?>" class="btn btn-danger">Sair</a>
-                </div>
+
+     
+                    
+  </div>
