--- a/app/views/login/index.phtml
+++ b/app/views/login/index.phtml
@@ -1,23 +1,40 @@
-            <div class="panel-body"> 
-            <?php echo (isset($this->menu) ? $this->menu : ''); ?>              
-               <form action="<?php echo BASE; ?>login/logar/" class="form-horizontal" method="post">
-                      <div class="form-group">
-                        <label for="username" class="col-sm-3 control-label">Usuário:</label>
-                        <div class="col-sm-8">
-                          <input type="text" name="username" class="form-control" id="username" value="<?php echo $this->request->post('username') ?>" placeholder="hxtutors">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label for="password" class="col-sm-3 control-label">Senha:</label>
-                        <div class="col-sm-8">
-                          <input type="password" name="password" class="form-control" id="password" placeholder="Sua senha">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-offset-3 col-sm-10">
-                          <button type="submit" class="btn btn-success">Entrar</button>
-                        </div>
-                      </div>
+<div class=""> 
+  <?php echo (isset($this->menu) ? $this->menu : ''); ?>              
+    <form action="<?php echo BASE; ?>login/logar/" class="form-signin" method="post">
+      <div class="row margin">
+        <div class="input-field container" >
+         <i class="material-icons prefix pt-5">person_outline</i>
+          <input type="text" name="username" class="form-control validate" id="username" value="<?php echo $this->request->post('username') ?>" placeholder="Login" required autofocus>
+          <label for="username" data-error="Email Inválido" data-success="Email_Válido" ></label>              
+        </div>
+      </div>
+      <div class="row margin">
+        <div class="input-field container">
+          <i class="material-icons prefix pt-5">lock_outline</i>
+          <input class="form-control" id="password" name="password" type="password" value="<?php echo $this->request->post('username') ?>" placeholder="Senha" required>
+          <label for="password" class="sr-only"></label>
+        </div>
+      </div> 
+      <div class="form-group center">
+        <div class="col-sm-offset-3 col-sm-10">
+          <button type="submit" class="btn btn-success">Entrar</button><br><br>
+          <h6>Você não tem uma conta?</h6>
+          <p class="col s12 m12 l12 ml-2 mt-3">
+            <a href="recuperar" class="right">Esqueceu a Senha?</a>     
+            <a href="cadastro" class="left">Crie Grátis!</a>
+            <br><br>
+          </p>
+        </div>
+      </div>  
+
+      <!--      
+      <div class="form-group">
+        <label for="password" class="col-sm-3 control-label">Senha:</label>
+          <div class="col-sm-8">
+            <input type="password" name="password" class="form-control" id="password" placeholder="Sua senha">
+          </div>
+        </div>-->
+        
                     </form>
             </div>
         </div>
